client/src/components/guessContainer.css
.tile-container {
  width: 330px;
  margin-bottom: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.tile-container .row {
  display: flex;
}

.tile-container .col {
  width: 50px;
  height: 50px;
  border: 2px solid grey;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 2px;
}

.message {
  display: flex;
}
@keyframes flipping {
  0% {
    transform: rotateX(0deg);
  }
  50% {
    transform: rotateX(90deg);
  }
  100% {
    transform: rotateX(0deg);
  }
}
.flip {
  animation: 0.5s linear flipping;
}
.default {
  background-color: black !important;
}
.grey-overlay {
  background-color: #3a3a3c !important;
  border: none !important;
  /* animation: 0.5s linear flipping; */
}
.key-grey-overlay {
  background-color: #3a3a3c !important;
  border: none !important;
}

.yellow-overlay {
  background-color: #b59f3a !important;
  border: none !important;
  /* animation: 0.5s linear flipping; */
}
.key-yellow-overlay {
  background-color: #b59f3a !important;
  border: none !important;
}

.green-overlay {
  background-color: #538d4e !important;
  border: none !important;
  /* animation: 0.5s linear flipping; */
}
.key-green-overlay {
  background-color: #538d4e !important;
  border: none !important;
}

.middles {
  display: flex;
  justify-content: center;
  align-items: baseline;
}

